Fix button alignment

--- a/packages/cms-admin/src/styles/_globalOverrides.sass
+++ b/packages/cms-admin/src/styles/_globalOverrides.sass
@@ -17,3 +17,8 @@ textarea
 
 a
 	text-decoration: none
+
+.bp3-icon
+	display: inline-flex
+	justify-content: center
+	align-items: center
