--- a/packages/ui/src/styles/abstract/buttonEssentials.sass
+++ b/packages/ui/src/styles/abstract/buttonEssentials.sass
@@ -15,3 +15,8 @@
 	border-width: $cui-control-border-width
 	border-radius: $cui-control-border-radius
 	text-shadow: 0 .5em .625em rgba(0, 0, 0, .075)
+
+	&-content
+		display: inline-flex
+		justify-content: center
+		align-items: center
